# APTGuard-AI

./: MENU_TABS_STATUS.txt  README.md  docker-compose.infra.yml  docker-compose.localdb.yml  docker-compose.yml  package.json  pnpm-lock.yaml  start_agents.ps1  start_all.ps1  start_api.ps1  start_web.ps1
.github/workflows/: check-openapi.yml  ci.yml  deploy-docs.yml  security-audit.yml
apps/web/: next.config.js  package.json  vitest.config.ts
apps/web/src/app/(app)/: loading.tsx
apps/web/src/app/(app)/cases/: page.tsx
apps/web/src/app/(app)/cni/: page.tsx
apps/web/src/app/(app)/cni/compliance/: page.tsx
apps/web/src/app/(app)/cni/correlation/: page.tsx
apps/web/src/app/(app)/cni/digital-twin/: page.tsx
apps/web/src/app/(app)/cni/ot-topology/: page.tsx
apps/web/src/app/(app)/cni/remediation/: page.tsx
apps/web/src/app/(app)/cni/threat-intel/: page.tsx
apps/web/src/app/(app)/cni/vulnerability/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/investigate/: page.tsx
apps/web/src/app/(app)/ueba/: page.tsx
apps/web/src/components/cni/: APTIntelligenceView.tsx  CERTInComplianceView.tsx  CNIDashboard.tsx  CorrelationView.tsx  DigitalTwinView.tsx  EOLRiskMapView.tsx  OTTopologyView.tsx  RemediationQueueView.tsx  UEBAView.tsx
apps/web/src/components/landing/sections/: Faq.tsx  FeatureGrid.tsx  Hero.tsx
apps/web/src/components/layout/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  TopBar.tsx
apps/web/src/test/: a11y.test.tsx
detections/cnf-ransomware/: cbse-data-exfil-pre-ransom.yaml  lockbit-cni-staging.yaml
detections/eol-exploitation/: eol-apache22-webshell.yaml  eol-windows7-exploit.yaml
detections/india-apt/: apt36-crimsonrat-c2.yaml  sidecopy-reverserat-beacon.yaml  volt-typhoon-lotl-recon.yaml
detections/ot/: dnp3-replay-attack.yaml  modbus-unauthorized-write.yaml  scada-it-to-ot-lateral-movement.yaml
docs/architecture/: SYSTEM_DESIGN.md
docs/design/: landing-page-brief.md
playbooks/cni/: cni-education-apt-response.playbook.json  cni-govt-it-breach-response.playbook.json  cni-healthcare-ransomware-response.playbook.json  cni-power-grid-ot-response.playbook.json
results/: benchmark_latest.json
scripts/: benchmark_eval.py  detection_specs_index.py  run_evals.py  security_audit_ignores.txt  seed_certin_rag.py  seed_ueba_baseline.py  setup_postgres.py  validate_detections.py
services/actions/: pyproject.toml
services/agents/: pyproject.toml
services/agents/app/: main.py
services/agents/app/agents/: __init__.py  apt_prediction_agent.py  certin_agent.py  eol_vuln_agent.py  india_apt_agent.py  ot_risk_agent.py
services/agents/app/api/: cni.py
services/agents/app/clients/: __init__.py  actions_client.py
services/agents/app/graph/: workflow.py
services/agents/app/orchestrator/: router.py
services/agents/app/rag/: __init__.py  certin_rag.py
services/agents/tests/eval_data/: cicids_micro.csv
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/_vendor/nl_query/: translator.py
services/api/app/api/v1/endpoints/: knowledge_base.py
services/api/app/db/: neo4j.py
services/api/app/scripts/: seed_demo.py
services/certin-reporter/: Dockerfile  pyproject.toml
services/certin-reporter/app/: main.py
services/certin-reporter/app/api/: routes.py
services/certin-reporter/app/models/: report.py
services/certin-reporter/app/services/: reporter.py
services/connectors/: pyproject.toml
services/digital-twin/: Dockerfile  pyproject.toml
services/digital-twin/app/: main.py
services/digital-twin/app/api/: routes.py
services/digital-twin/app/core/: __init__.py  config.py
services/digital-twin/app/models/: scenario.py
services/digital-twin/app/services/: graph.py  simulator.py
services/eol-prioritiser/: Dockerfile  pyproject.toml
services/eol-prioritiser/app/: main.py
services/eol-prioritiser/app/api/: routes.py
services/eol-prioritiser/app/models/: asset.py
services/eol-prioritiser/app/services/: cve_feed.py  prioritiser.py
services/fusion/: pyproject.toml
services/osquery-tls/: pyproject.toml
services/ot-connector/: Dockerfile  pyproject.toml
services/ot-connector/app/: main.py
services/ot-connector/app/api/: routes.py
services/ot-connector/app/models/: ot_event.py
services/ot-connector/app/services/: normaliser.py
services/threatintel/app/actors/: attribution.py
