[tool.poetry]
name = "aisoc-certin-reporter"
version = "1.0.0"
description = "AiSOC CERT-In 6-Hour Compliance Reporter — Auto-generates mandatory incident reports per CERT-In Directions 2022"
authors = ["AiSOC CNI Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
structlog = "^24.1.0"
apscheduler = "^3.10.4"
jinja2 = "^3.1.3"
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
