[tool.poetry]
name = "aisoc-eol-prioritiser"
version = "1.0.0"
description = "AiSOC EoL Asset Vulnerability Prioritiser — CVE × End-of-Life amplification for India CNI"
authors = ["AiSOC CNI Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
structlog = "^24.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
